[ITB-1913] When creating conformance statements ensure confirm and cancel options are always visible

--- a/gitb-ui/ui/src/app/pages/organisation/create-conformance-statement/create-conformance-statement.component.less
+++ b/gitb-ui/ui/src/app/pages/organisation/create-conformance-statement/create-conformance-statement.component.less
@@ -22,5 +22,10 @@
     opacity: 0.5;
 }
 .statement-container {
-    padding-top: 5px;
+    margin-top: 10px;
+    padding-right: 5px;
+    margin-right: -5px;
+    overflow-y: auto;
+    max-height: calc(100vh - 459px);
+    min-height: 70px;
 }
